--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "mongoose": "^6.2.0",
     "mongoose-sequence": "^5.3.1",
     "path": "^0.12.7",
