package name updated

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "zil_queue",
-  "version": "1.0.2",
+  "name": "zil-queue",
+  "version": "1.0.3",
   "description": "A simple queuing engine that works on principle of SJF, FIFO, and multi priority scheduling algorithms",
   "main": "index.js",
   "scripts": {
