--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zil-queue",
+  "name": "@akindutire/zil-queue",
   "version": "1.0.3",
   "description": "A simple queuing engine that works on principle of SJF, FIFO, and multi priority scheduling algorithms",
   "main": "index.js",
