--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -19,5 +20,8 @@
     "path": "^0.12.7",
     "serialize-javascript": "^6.0.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "typescript": "^4.5.5"
   }
 }
