--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "path": "^0.12.7",
     "serialize-javascript": "^6.0.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^22.14.0",
+    "@types/uuid": "^10.0.0",
+    "typescript": "^5.8.3"
   }
 }
