--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.2.0",
     "mongoose-sequence": "^5.3.1",
     "path": "^0.12.7",
+    "redis": "^4.7.0",
     "serialize-javascript": "^6.0.0",
     "uuid": "^8.3.2"
   },
