--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "mongoose": "^6.2.0",
     "mongoose-sequence": "^5.3.1",
     "path": "^0.12.7",
+    "pg": "^8.14.1",
     "redis": "^4.7.0",
     "serialize-javascript": "^6.0.0",
+    "typeorm": "^0.3.22",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
