--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^22.14.0",
     "@types/uuid": "^10.0.0",
     "typescript": "^5.8.3"
