--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@akindutire/zil-queue",
   "version": "1.0.31",
-  "description": "A simple queuing engine that works on principle of SJF, FIFO, and multi priority scheduling algorithms",
+  "description": "A priority scheduling job engine that works on principle of FIFO and SJF algorithms",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
@@ -15,15 +15,20 @@
   "dependencies": {
     "@types/md5": "^2.3.5",
     "@types/serialize-javascript": "^5.0.4",
+    "cockroachdb": "^1.0.3",
     "dotenv": "^16.0.0",
     "get-installed-path": "^4.0.8",
     "md5": "^2.3.0",
+    "mongo": "^0.1.0",
     "mongoose": "^6.2.0",
     "mongoose-sequence": "^5.3.1",
+    "mysql": "^2.18.1",
     "path": "^0.12.7",
     "pg": "^8.14.1",
     "redis": "^4.7.0",
+    "reflect-metadata": "^0.2.2",
     "serialize-javascript": "^6.0.0",
+    "sqlite": "^5.1.1",
     "typeorm": "^0.3.22",
     "uuid": "^8.3.2"
   },
