--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cockroachdb": "^1.0.3",
     "dotenv": "^16.0.0",
     "get-installed-path": "^4.0.8",
+    "mariadb": "^3.4.1",
     "md5": "^2.3.0",
     "mongo": "^0.1.0",
     "mongoose": "^6.2.0",
